BE-158/159/161/162: add sponsor management APIs and reporting
